springmvc: servlet test: using multiple connection from one hsqldb datasource(based on java.sql.Driver) within one thread.

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,8 @@
         <!-- junit -->
         <org.junit.junit-bom.version>5.7.1</org.junit.junit-bom.version>
 
+        <hsqldb.version>2.3.6</hsqldb.version>
+
     </properties>
 
     <dependencyManagement>
