--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -230,6 +230,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+        </dependency>
+
     </dependencies>
 
 
