--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,9 @@
         <javax.json-api.version>1.1</javax.json-api.version>
         <org.glassfish-javax.json.version>1.1</org.glassfish-javax.json.version>
 
+        <!-- json-b yasson version same as glassfish5 -->
+        <org.eclipse-yasson.version>1.0.3</org.eclipse-yasson.version>
+
         <!-- serialize -->
         <caucho.hessian.version>4.0.65</caucho.hessian.version>
 
