feature: test command args extend with command executable file path with spaces  character.

--- a/feature/src/main/java/collection/property/recursive/recursive.properties
+++ b/feature/src/main/java/collection/property/recursive/recursive.properties
@@ -8,12 +8,12 @@ user.password=passwd
 java.debug=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=28030
 java.options=prefix-java-options ${java.debug} suffix-java-options
 
-# ping
+# ping with user
 exec.ping.bin.pattern=^.*ping.*$
 exec.ping.args.prefix=--user ${user.name} --password ${user.password}
 exec.ping.args.suffix=
 
-# echo
-exec.echo.bin.pattern=^echo$
+# echo with ping
+exec.echo.bin.pattern=^echo|.*b.in.echo6.*$
 exec.echo.args.prefix=${exec.ping.args.prefix}
 exec.echo.args.suffix=echo-first-option ${java.options} echo-last-option
