feature: test multi-datasource using hsqldb client to execute sql query with jdbc driver.

--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -268,6 +268,12 @@
             <version>${commons-io.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+        </dependency>
+
     </dependencies>
 
     <!--  spigotmc 的仓库      -->
