feature: test convert format of project file between ms project .xml and projectlibre .pod with net.sf.mpxj.sample.MpxjConvert.

--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -274,6 +274,12 @@
             <version>${hsqldb.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.mpxj</groupId>
+            <artifactId>mpxj</artifactId>
+            <version>${mpxj.version}</version>
+        </dependency>
+
     </dependencies>
 
     <!--  spigotmc 的仓库      -->
