refactor: fixed the dependency conflict caused by jedis and the conflicting dependency is consistent with the use of jedis.

--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -92,6 +92,13 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>${jedis.version}</version>
+            <!-- there is no version specified by jedis, using version we specific from org.apache.commons:commons-dbcp2 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-pool2</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -266,6 +273,13 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
+            <!-- Use the version we specify to avoid dependency conflicts (conflict with redis.clients:redis) -->
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
