springmvc: spring jdbc with EmbeddedDatabaseBuilder for hsqldb using JdbcTemplate.

--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -272,6 +272,8 @@
                 <includes>
                     <include>**/spring-*.xml</include>
                     <include>**/spring-*.properties</include>
+                    <!-- 增加对 hsqldb 的 sql 资源文件打包 -->
+                    <include>**/*.sql</include>
                 </includes>
             </resource>
 
