--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
         <dbcp2.version>2.9.0</dbcp2.version>
         <hikaricp.version>4.0.3</hikaricp.version>
         <oceanbase-client.version>1.1.10</oceanbase-client.version>
+        <!-- 对应 mybatis=3.4.6 spring=4.3.25.RELEASE  -->
+<!--        <mybatis-spring.version>1.3.3</mybatis-spring.version>-->
+        <!-- 对应 mybatis=3.5.13 spring=5.3.27  -->
+        <mybatis-spring.version>2.1.1</mybatis-spring.version>
+        <mybatis.version>3.5.13</mybatis.version>
         <hsqldb.version>2.3.6</hsqldb.version>
             <!-- unsupported login timeout -->
 <!--        <hsqldb.version>1.8.0.10</hsqldb.version>-->
