springmvc: test spring-aop @EnableAspectJAutoProxy, @Aspect and @Before with TransactionSynchronizationAdapter.

--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -269,6 +269,13 @@
             <version>${mybatis.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+        </dependency>
+
     </dependencies>
 
 
