--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <!-- 对应 mybatis=3.5.13 spring=5.3.27  -->
         <mybatis-spring.version>2.1.1</mybatis-spring.version>
         <mybatis.version>3.5.13</mybatis.version>
+        <aspectjweaver.version>1.9.19</aspectjweaver.version>
         <hsqldb.version>2.3.6</hsqldb.version>
             <!-- unsupported login timeout -->
 <!--        <hsqldb.version>1.8.0.10</hsqldb.version>-->
