feature: there are uncommitted transactions, hsqldb will be permanently hung when executing the select statement with a new connection.

--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -319,6 +319,7 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>${hsqldb.version}</version>
+            <classifier>jdk6debug</classifier>
         </dependency>
 
         <dependency>
