--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
 
         <!--feature springmvc-->
-        <tomcat.dir.install>C:/apache-tomcat-8.5.37</tomcat.dir.install>
+        <tomcat.dir.install>G:/apache-tomcat-8.5.37</tomcat.dir.install>
         <!--8.5.37 NamingContextListener 的 containerEvent() 被标记为 @Deprecated
             其方法体为 no-op,
             同时提及将在tomcat10中移除 NamingContextListener类 ContainerListener的接口和实现
@@ -135,6 +135,8 @@
         <org.junit.junit-bom.version>5.7.1</org.junit.junit-bom.version>
 
         <mpxj.version>10.11.0</mpxj.version>
+
+        <swagger2.version>2.9.2</swagger2.version>
 
     </properties>
 
