springmvc: support for using swagger2 and swagger-ui to provide API docs.(unit test to compare json string struct with jsonassert.)

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
         <mpxj.version>10.11.0</mpxj.version>
 
         <swagger2.version>2.9.2</swagger2.version>
+        <jsonassert.version>1.5.1</jsonassert.version>
 
     </properties>
 
