--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -287,6 +287,14 @@
             <version>${swagger2.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${jsonassert.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
